--- a/config/database.yml
+++ b/config/database.yml
@@ -82,4 +82,5 @@ production:
   <<: *default
   database: wellness_platform_api_production
   username: wellness_platform_api
+  url: <%= ENV["MY_APP_DATABASE_URL"] %>
   password: <%= ENV["WELLNESS_PLATFORM_API_DATABASE_PASSWORD"] %>
